--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "discord.js": "^12.5.3",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^10.0.0",
+    "git": "^0.1.3"
   },
   "name": "c6ot",
   "version": "1.0.0",
