версион 1.0 стабле (нет)

--- a/helper/config.json
+++ b/helper/config.json
@@ -1,4 +1,4 @@
 {
-    "token":"your bot token",
-    "prefix":"your prefix"
+    "token":"ODU5NzEyNjQ1MjUxMDcyMDAw.YNwryw.PZ45Nme5RGYzS0q6HPRSxUtDJyk",
+    "prefix":"/"
 }
